# PyHEIC2JPG

./: README.md  cli_install_bash.sh  pyproject.toml
pyheic2jpg/: main.py
